<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fastD</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">手机号或用户名</string>
    <string name="password_hint">密码</string>
    <string name="user_login_but">用户登录</string>
    <string name="fastd_login_but">快递员登录</string>
    <string name="dummy_email">jondoe@gmail.com</string>
    <string name="dummy_password">123456789</string>
    <string name="Sign_in">Sign in</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="Question">How are you?</string>
    <string name="Send">Send</string>
    <string name="Done">Done</string>
    <string name="Upload">Upload</string>
    <string name="Beautiful_Picture">Beautiful Picture</string>
    <string name="Uploading">Uploading</string>
    <string name="Loading_Complete">Loading Complete, button is disabled</string>

    <array name="sample_list">
        <item>Action Button Progress sample</item>
        <item>Action Button Endless Progress sample</item>
        <item>Submit Button Progress sample</item>
        <item>Generate Button Progress sample</item>
        <item>Button State sample</item>
    </array>

    <string name="findPassword">密码找回</string>
    <string name="user_register_but">用户注册</string>
    <string name="fastd_register">快递员注册</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_user_regidter_">User_regidter_Activity</string>
    <string name="user_register_aciontbarTitle">用户注册</string>
    <string name="user_register_phone">请输入手机号码</string>
    <string name="urv1_yanZhengMa">验 证 码</string>
    <string name="ok">确 定</string>
    <string name="urv2_pw1">请输入密码</string>
    <string name="urv2_pw2">确认密码</string>
    <string name="urv1_next_but">下一步</string>
    <string name="urv2_but">完  成</string>
    <string name="title_activity_fast">FastActivity</string>
    <string name="frv3_Name_hint">请输入你的真实姓名</string>
    <string name="frv3_compay_hint">请选择快递公司</string>
    <string name="frv3_pw_hint">请输入密码</string>
    <string name="frv3_pw_hint2">确认密码</string>
    <string name="fastregister_actionBar_title">快递员注册</string>
    <string name="but_receiptAd">添加收货地址</string>
    <string name="but_commitFormAd">确定</string>
    <string name="tv_Adtip">请先选择收货地址:</string>
    <string name="tv_user_adTip">请先选择收货地址</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="et_formNUm">请输入订单号</string>
    <string name="find_form">查询</string>
    <string name="title_activity_reciept_ad">RecieptAdActivity</string>
    <string name="but_next_addAd">下一步</string>
    <string name="r_name">收货人的姓名</string>
    <string name="r_phone">收货人手机号</string>
    <string name="r_AdData">填写详细地址信息</string>
    <string name="r_register">提交</string>
    <string name="m5_Ad">系统已定位到你的大概位置，请填写详细位置</string>
    <string name="beizhu">备注</string>
    <string name="tijiao">提交</string>
    <string name="title_activity_web_activity_simple">WebActivity_simple</string>
    <string name="title_activity_mapand_info">MapandInfoActivity</string>

</resources>
