<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout 
        android:layout_below="@id/login_frame_title"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        >
        
       <TextView 
            android:id="@+id/toast_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#DA4035"
			android:layout_gravity="right"
            android:text=""/>
        
        <cn.zh.Utils.UnderLineEditText
        android:id="@+id/user_username"
        android:drawableLeft="@drawable/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_gravity="center"   
		android:background="@null"    
		android:drawableRight="@drawable/close"
		android:singleLine="true"
		android:scrollHorizontally="true"
		android:maxLength="11"
		android:hint="@string/username_hint"
		android:selectAllOnFocus="true"
		android:textColorHint="@color/textColorHint"
		android:paddingBottom="5dp"
		android:paddingLeft="5dp"
		android:inputType="phone"
        />
        
        <cn.zh.Utils.UnderLineEditText
        android:id="@+id/user_password"
        android:drawableLeft="@drawable/lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_gravity="center"   
		android:background="@null"    
		android:drawableRight="@drawable/close"
		android:singleLine="true"
		android:scrollHorizontally="true"
		android:maxLength="20"
		android:hint="@string/password_hint"
		android:selectAllOnFocus="true"
		android:textColorHint="@color/textColorHint"
		android:inputType="textPassword"
		android:layout_marginTop="20dp"
		android:paddingBottom="5dp"
		android:paddingLeft="5dp"
        />
        
         
        
        <cn.zh.Utils.ActionProcessButton
            android:id="@+id/user_login_but"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/user_login_but"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal" 
            />
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="11dp">
        
        <Button 
            android:id="@+id/user_findPassword_but"
            android:layout_marginLeft="15dp"
            android:text="@string/findPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="#00B4FA"
            style="@null"
            android:background="@null"/>
        
        <Button 
            android:id="@+id/user_register_but"
            android:layout_marginRight="15dp"
            android:text="@string/user_register_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:textColor="#00B4FA"
            style="@null"
            android:background="@null"
            />
        
    </RelativeLayout>

</RelativeLayout>
