<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <cn.zh.Utils.UnderLineEditText
        android:id="@+id/frv3_fastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:hint="@string/frv3_Name_hint"
        android:maxLength="15"
        android:paddingLeft="5dp"
        android:scrollHorizontally="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColorHint="@color/textColorHint"
        android:textSize="17sp" />

    <cn.zh.Utils.UnderLineEditText
        android:id="@+id/frv3_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frv3_fastName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:clickable="true"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/frv3_compay_hint"
        android:paddingLeft="5dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColorHint="@color/textColorHint"
        android:textSize="17sp" />

    <cn.zh.Utils.UnderLineEditText
        android:id="@+id/frv3_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frv3_company"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/frv3_pw_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingLeft="5dp"
        android:scrollHorizontally="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColorHint="@color/textColorHint"
        android:textSize="17sp" />

    <cn.zh.Utils.UnderLineEditText
        android:id="@+id/frv3_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frv3_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/frv3_pw_hint2"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingLeft="5dp"
        android:scrollHorizontally="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textColorHint="@color/textColorHint"
        android:textSize="17sp" />

    <Button
        android:id="@+id/frv3_but"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/long_but_marginBottom"
        android:layout_marginLeft="@dimen/long_but_marginLR"
        android:layout_marginRight="@dimen/long_but_marginLR"
        android:background="@drawable/but_login_selector"
        android:text="@string/urv2_but" />

</RelativeLayout>