<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/def"
    tools:context=".RegisterActivity" >
    
	<LinearLayout 
	    android:id="@+id/urv1_linear"
	    android:layout_marginTop="100dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    
   	<cn.zh.Utils.UnderLineEditText
   	    android:id="@+id/urv1_phone"
   	    android:inputType="phone"
   	    android:layout_marginRight="15dp"
   	    android:layout_marginLeft="20dp"
   	    android:layout_weight="5"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_gravity="center"
   	    android:background="@null"
   	    android:hint="@string/user_register_phone"
   	    android:maxLength="11"
   	    android:paddingBottom="3dp"
   	    android:paddingLeft="5dp"
   	    android:scrollHorizontally="true"
   	    android:selectAllOnFocus="true"
   	    android:singleLine="true"
   	    android:textColorHint="@color/textColorHint"
   	    android:textSize="17sp"
   	     />

    	
   	<Button
   	    android:id="@+id/urv1_getvarify_but"
   	    android:padding="0dp"
   	    android:background="@drawable/but_login_selector_min"
   	    android:layout_weight="1"
   	    android:layout_marginLeft="10dp"
   	    android:layout_width="wrap_content"
   	    android:layout_height="38dp"
   	    android:layout_marginRight="20dp"
   	    android:text="@string/ok"
   	    />
   	
	    
	</LinearLayout>
	
	<cn.zh.Utils.UnderLineEditText
   	    android:id="@+id/urv1_varify"
   	    android:layout_below="@id/urv1_linear"
   	    android:layout_marginTop="15dp"
   	    android:layout_marginLeft="20dp"
   	    android:inputType="number"
   	    android:layout_width="100dp"
   	    android:layout_height="wrap_content"
   	    android:background="@null"
   	    android:hint="@string/urv1_yanZhengMa"
   	    android:maxLength="8"
   	    android:paddingBottom="5dp"
   	    android:paddingLeft="5dp"
   	    android:scrollHorizontally="true"
   	    android:selectAllOnFocus="true"
   	    android:singleLine="true"
   	    android:textColorHint="@color/textColorHint"
   	    android:textSize="17sp"
   	     >

   	</cn.zh.Utils.UnderLineEditText>
		
	<TextView 
            android:id="@+id/urv1_toast"
            android:layout_below="@id/urv1_varify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#DA4035"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="20dp"
            android:text=""/>
	
   	<Button 
   	    android:id="@+id/urv1_next_but"
   	    
   	    android:background="@drawable/but_login_selector"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:text="@string/urv1_next_but"
   	    android:layout_alignParentBottom="true"
   	    android:layout_marginLeft="@dimen/long_but_marginLR"
   		android:layout_marginRight="@dimen/long_but_marginLR"
   	    android:layout_marginBottom="@dimen/long_but_marginBottom"/>

</RelativeLayout>
